// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollingSearchBox should render 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <Translate(SearchInput)
      filterText="Test"
      onClickInput={[Function]}
      onFilterTextChange={[Function]}
    />
  </Headroom>
</div>
`;

exports[`ScrollingSearchBox should set correct reference 1`] = `
<div>
  <div
    class="headroom2"
  >
    <div
      class=""
    >
      <div
        class="search"
      >
        <span
          aria-hidden="true"
          class="fa fa-search searchIcon"
        />
        <input
          class="searchInput"
          placeholder="common:search"
          type="text"
          value="Test"
        />
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`ScrollingSearchBox should space search 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <Translate(SearchInput)
      filterText="Test"
      onClickInput={[Function]}
      onFilterTextChange={[Function]}
      spaceSearch={true}
    />
  </Headroom>
</div>
`;
